# fit-ctf-virt

./: .gitignore  README.md  env-example.yaml  init.sh  pyproject.toml  tasks.py
configs/: instance_fit-ctf-database.yaml  instance_fit-ctf-playground.yaml  network.yaml  pool.yaml
resources/: ansible_extra_vals.yaml.j2  init.sh
resources/database/: vals.yaml
resources/database/ansible/: ansible.cfg  playbook.yaml
resources/database/ansible/playbooks/: main.yaml
resources/database/ansible/roles/mongodb/tasks/: main.yaml
resources/local_database/ansible/: inventory.ini  playbook.yaml
resources/local_database/ansible/roles/mongodb/tasks/: main.yaml
resources/monitoring/ansible/: inventory.ini  playbook.yaml
resources/monitoring/ansible/roles/docker/files/: dashboard_default.yaml  fit-ctf_graphs.json
resources/monitoring/ansible/roles/docker/tasks/: main.yaml
resources/monitoring/ansible/roles/docker/templates/: docker-compose.yaml.j2  monitoring.service.j2  prometheus.yaml.j2
resources/playground/: init.sh  init.sh.j2
resources/playground/ansible/: inventory.ini  playbook.yaml
resources/playground/ansible/roles/fit-ctf/tasks/: install_fit_ctf.yaml  install_local_db.yaml  main.yaml  resize_disk.yaml  setup_user.yaml
resources/playground/ansible/roles/fit-ctf/templates/: fit-ctf-env.j2
resources/playground/ansible/roles/node-exporter/tasks/: main.yaml
resources/playground/ansible/roles/node-exporter/templates/: node-exporter.container
templates/: network.yml.j2  pool.yml.j2  profile.yml.j2
(+1 files in other folders)
